--- a/gb/20/8/31/n12370216.md
+++ b/gb/20/8/31/n12370216.md
@@ -1,67 +1,54 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>国民党嘉县市议会党团 拒绝含瘦肉精猪肉</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/d8eb871c1f0b38aa30c78d756074dff3-600x400.jpg" />
 <h6>国民党嘉义县市议会党团于8月31日上午，在国民党嘉义市党部联合召开“拒绝瘦肉精猪肉，捍卫全民健康”记者会，由国民党嘉义县议会党团书记长李国胜（右5）、嘉义市议会党团书记长张秀华（右6），以及嘉义县、市党部主委蔡明显（左1）联合主持，并高喊“拒美猪、顾健康”等口号。（国民党嘉义县党部提供）
 </h6>
 <hr>
-<p>【大纪元2020年08月31日讯】（大纪元记者蔡上海台湾嘉义报导）针对蔡英文总统于8月28日，在“不愿接受国会监督”、“不与地方政府沟通”、“不管产业冲击”的“三不政策”前提下，径自宣布将开放含瘦肉精之美猪进口，不仅可能重创台湾的畜牧业，更将人民的健康弃之于不顾之措施，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E6%B0%91%E5%85%9A.md#1">国民党</a>嘉义县市<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%AE%AE%E4%BC%9A%E5%85%9A%E5%9B%A2.md#1">议会党团</a>于8月31日上午，在国民党嘉义市党部联合召开“拒绝<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%98%A6%E8%82%89%E7%B2%BE%E7%8C%AA%E8%82%89.md#1">瘦肉精猪肉</a>，捍卫全民健康”记者会，除了坚决反对开放来自任何一个国家含瘦肉精的猪肉进口之外，嘉义县市议会党团强调，将增修县市食安条例修正案，要求“辖内贩售地猪肉及其他制品不得检出乙型受体素（瘦肉精）”，一定要保障嘉义县市民众健康。</p>
-<p>此项记者会，由<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%9B%BD%E6%B0%91%E5%85%9A.md#1">国民党</a>嘉义县<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%AE%AE%E4%BC%9A%E5%85%9A%E5%9B%A2.md#1">议会党团</a>书记长李国胜、嘉义市议会党团书记长张秀华，以及嘉义县、市党部主委蔡明显联合主持，多位县、市议员出席参加。蔡明显首先表示，蔡政府“昨是今非，不重视国人食安健康”，蔡英文政府对得起自己良心吗？当年民进党义正严词，反对美猪美牛进口的理由，还存在吗？他说，当年民进党政府带猪农反对美猪进口，如今宣布开放，让人有“昨是今非”感受，开放美猪进口，不符国人重视食安健康的期待。</p>
-<figure id="attachment_12370219" aria-describedby="caption-attachment-12370219" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/62d08c039eac84cab10cfaa4c426e564-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-12370219" src="https://i.epochtimes.com/assets/uploads/2020/08/62d08c039eac84cab10cfaa4c426e564-450x338.jpg" alt="" width="600" b="451" /></a><figcaption id="caption-attachment-12370219" class="wp-caption-text">国民党嘉义县市议会党团于8月31日上午，在国民党嘉义市党部联合召开“拒绝<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%98%A6%E8%82%89%E7%B2%BE%E7%8C%AA%E8%82%89.md#1">瘦肉精猪肉</a>，捍卫全民健康”记者会，并高喊“拒美猪、顾健康”等口号。（国民党嘉义县党部提供）</figcaption></figure>
+<p>【大纪元2020年08月31日讯】（大纪元记者蔡上海台湾嘉义报导）针对蔡英文总统于8月28日，在“不愿接受国会监督”、“不与地方政府沟通”、“不管产业冲击”的“三不政策”前提下，径自宣布将开放含瘦肉精之美猪进口，不仅可能重创台湾的畜牧业，更将人民的健康弃之于不顾之措施，国民党嘉义县市议会党团于8月31日上午，在国民党嘉义市党部联合召开“拒绝瘦肉精猪肉，捍卫全民健康”记者会，除了坚决反对开放来自任何一个国家含瘦肉精的猪肉进口之外，嘉义县市议会党团强调，将增修县市食安条例修正案，要求“辖内贩售地猪肉及其他制品不得检出乙型受体素（瘦肉精）”，一定要保障嘉义县市民众健康。</p>
+<p>此项记者会，由国民党嘉义县议会党团书记长李国胜、嘉义市议会党团书记长张秀华，以及嘉义县、市党部主委蔡明显联合主持，多位县、市议员出席参加。蔡明显首先表示，蔡政府“昨是今非，不重视国人食安健康”，蔡英文政府对得起自己良心吗？当年民进党义正严词，反对美猪美牛进口的理由，还存在吗？他说，当年民进党政府带猪农反对美猪进口，如今宣布开放，让人有“昨是今非”感受，开放美猪进口，不符国人重视食安健康的期待。</p>
+<figure id="attachment_12370219" aria-describedby="caption-attachment-12370219" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/62d08c039eac84cab10cfaa4c426e564-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class=" wp-image-12370219" src="https://i.epochtimes.com/assets/uploads/2020/08/62d08c039eac84cab10cfaa4c426e564-450x338.jpg" alt="" width="600" b="451" /></a><figcaption id="caption-attachment-12370219" class="wp-caption-text">国民党嘉义县市议会党团于8月31日上午，在国民党嘉义市党部联合召开“拒绝瘦肉精猪肉，捍卫全民健康”记者会，并高喊“拒美猪、顾健康”等口号。（国民党嘉义县党部提供）</figcaption></figure>
 <p>李国胜指出，美国猪农只有3成用瘦肉精，美卫生部部长阿札尔来台，阿札尔就是卖瘦肉精的老板，到台湾却说关心台湾，根本是在转移焦点，重点就是要把美国猪肉卖给台湾。另外，民进党这种行政命令通过方式，就是独裁，国民党议会党团一定会为食安把关，民进党要听人民心声。因此党团预定在县议会下次临时会，提嘉义县食安条例修正案，要求“辖内贩售地猪肉及其他制品不得检出乙型受体素（瘦肉精）”，一定要保障嘉义县民众健康。</p>
-<figure id="attachment_12370220" aria-describedby="caption-attachment-12370220" style="width: 602px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/83607a7b79de5c13327004ee440a9286-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-12370220" src="https://i.epochtimes.com/assets/uploads/2020/08/83607a7b79de5c13327004ee440a9286-450x338.jpg" alt="" width="602" b="452" /></a><figcaption id="caption-attachment-12370220" class="wp-caption-text">国民党嘉义县议会党团书记长李国胜（如图），在“拒绝瘦肉精猪肉，捍卫全民健康”记者会中表示，国民党议会党团一定会为食安把关。（国民党嘉义县党部提供）</figcaption></figure>
+<figure id="attachment_12370220" aria-describedby="caption-attachment-12370220" style="width: 602px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/83607a7b79de5c13327004ee440a9286-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class=" wp-image-12370220" src="https://i.epochtimes.com/assets/uploads/2020/08/83607a7b79de5c13327004ee440a9286-450x338.jpg" alt="" width="602" b="452" /></a><figcaption id="caption-attachment-12370220" class="wp-caption-text">国民党嘉义县议会党团书记长李国胜（如图），在“拒绝瘦肉精猪肉，捍卫全民健康”记者会中表示，国民党议会党团一定会为食安把关。（国民党嘉义县党部提供）</figcaption></figure>
 <p>林于玲议员强调，民进党以前反对瘦肉精，现在民进党政府却开放进口，蔡总统变了，背离人民。詹黄素莲议员指出，蔡政府不顾民意反对，将人民的健康弃之不顾，党团将提嘉义县食安条例修正案，维护民众健康。吴思蓉议员认为，一定要坚持瘦肉精零检出，民进党陈其迈以前反对瘦精，现在换了位子换了脑袋，蔡英文也是一样。詹琬蓁议员也强调，民进党没有和民众沟通，执政之后就可以这样吗？</p>
-<figure id="attachment_12370221" aria-describedby="caption-attachment-12370221" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/545d420e0760e0fea9057fc4cd49f3db-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-12370221" src="https://i.epochtimes.com/assets/uploads/2020/08/545d420e0760e0fea9057fc4cd49f3db-450x338.jpg" alt="" width="600" b="451" /></a><figcaption id="caption-attachment-12370221" class="wp-caption-text">嘉义县议员林于玲（如图）在“拒绝瘦肉精猪肉，捍卫全民健康”记者会中强调，民进党以前反对瘦肉精，现在民进党政府却开放进口，背离人民。（国民党嘉义县党部提供）</figcaption></figure>
+<figure id="attachment_12370221" aria-describedby="caption-attachment-12370221" style="width: 600px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/545d420e0760e0fea9057fc4cd49f3db-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class=" wp-image-12370221" src="https://i.epochtimes.com/assets/uploads/2020/08/545d420e0760e0fea9057fc4cd49f3db-450x338.jpg" alt="" width="600" b="451" /></a><figcaption id="caption-attachment-12370221" class="wp-caption-text">嘉义县议员林于玲（如图）在“拒绝瘦肉精猪肉，捍卫全民健康”记者会中强调，民进党以前反对瘦肉精，现在民进党政府却开放进口，背离人民。（国民党嘉义县党部提供）</figcaption></figure>
 <p>在记者会当中，蔡明显和所有出席与会的嘉义县、市议会国民党团议员，一同齐声高喊“拒美猪、顾健康”、“坚持瘦肉精零检出”、“捍卫民意、拒绝黑箱”，充分表达坚决反对开放含瘦肉精猪肉进口的心声。</p>
-<figure id="attachment_12370222" aria-describedby="caption-attachment-12370222" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/c459924e330b16ad340a499364532ba1-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-12370222" src="https://i.epochtimes.com/assets/uploads/2020/08/c459924e330b16ad340a499364532ba1-450x338.jpg" alt="" width="601" b="451" /></a><figcaption id="caption-attachment-12370222" class="wp-caption-text">嘉义县议员詹黄素莲（如图）在“拒绝瘦肉精猪肉，捍卫全民健康”记者会中指出，蔡政府不顾民意反对，将人民的健康弃之不顾，党团将提嘉义县食安条例修正案，维护民众健康。（国民党嘉义县党部提供）</figcaption></figure>
+<figure id="attachment_12370222" aria-describedby="caption-attachment-12370222" style="width: 601px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2020/08/c459924e330b16ad340a499364532ba1-450x338.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class=" wp-image-12370222" src="https://i.epochtimes.com/assets/uploads/2020/08/c459924e330b16ad340a499364532ba1-450x338.jpg" alt="" width="601" b="451" /></a><figcaption id="caption-attachment-12370222" class="wp-caption-text">嘉义县议员詹黄素莲（如图）在“拒绝瘦肉精猪肉，捍卫全民健康”记者会中指出，蔡政府不顾民意反对，将人民的健康弃之不顾，党团将提嘉义县食安条例修正案，维护民众健康。（国民党嘉义县党部提供）</figcaption></figure>
 <p>责任编辑：郑桦</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/10/4/n9699217.md#1">卖过期肉轻罚 业者再传进口瘦肉精猪脚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/10/12/n9725261.md#1">禁瘦肉精入校园 国民党立委批教部太消极</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/8/28/n12364410.md#1">瘦肉精美猪松绑 台农委会：政府把关食安无虞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/8/30/n12367826.md#1">区分瘦肉精肉品 台农委会：将强制标示</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926411.md#1">屏东流浪犬猫收容中心 2023年底完工</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926425.md#1">土耳其强震 屏东人道救援队抵灾区投入救援</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926407.md#1">雾台阿礼部落暂未开放 屏县府吁民众勿擅闯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926246.md#1">云林家扶展力学子 踏出户外展现自我能力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926236.md#1">迎接开学日 嘉义市校园全面整备 防疫不松懈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926287.md#1">忠训国际、美伦国际兰馨交流协会 携手捐云林复康巴士</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/4/n9699217.md#1">卖过期肉轻罚 业者再传进口瘦肉精猪脚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/12/n9725261.md#1">禁瘦肉精入校园 国民党立委批教部太消极</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/8/28/n12364410.md#1">瘦肉精美猪松绑 台农委会：政府把关食安无虞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/8/30/n12367826.md#1">区分瘦肉精肉品 台农委会：将强制标示</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418032.md#1">屏东渔港变身浪漫秘境  情人节“暧暧在海边”登场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418005.md#1">屏东“蛇来运转185”双层巴士启航 周春米率队体验</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418010.md#1">嘉市环境清洁周 百名志工动员清理嘉园</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417959.md#1">林铁及文资处处长 由王昭堡接任专业领航</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417930.md#1">嘉大张文兴  治疗型肿瘤疫苗临床前测试成功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14417329.md#1">林国基“日式漆器收藏展”虎尾出张所宿舍展出</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/2/n10356748.md#1" target="_blank">林辉：并未救国的“五四运动”只是胡闹而已</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/14/n7998054.md#1" target="_blank">“如没有法轮功 我后半生一定在轮椅上度过”</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812825.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（4）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/16/n10718504.md#1" target="_blank">这些患绝症的精英们何以逢生（4）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922806.md#1">美国牧师濒死见地狱惨状 耶稣交代他一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922072.md#1">【未解之谜】新旧交替 地球面临大更新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/30/n13918315.md#1">【百年真相】活活饿死数十万人 长春围困战内幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921879.md#1">楚一丁：北美沙漠上不死的自由中国魂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921256.md#1">元宵节俗：一颗元宵汤圆承载的历史超乎想像</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926153.md#1">【中国禁闻】间谍气球疑云：中共内斗失控？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926140.md#1">【有冇搞错】中共陷入负循环 很快玩完</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926152.md#1">【全球新闻】一只气球好大坑？ 中共计划浮出水面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924854.md#1">组图：美军方公布中共间谍气球残骸照片</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924607.md#1">岳山：陈文清泄习近平心病 两会现权斗暗涌？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924304.md#1">首架国产C919被爆出故障 东航绝口不提</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924175.md#1">惊传与杨颖复合 黄晓明过年无名指戴钻戒引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924832.md#1">从中国回土国探亲 男星唐小强遭强震埋入废墟</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925663.md#1">富商丈夫被爆涉嫌诈骗 王丽坤豪宅名车遭冻结</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924145.md#1">家乡土耳其发生强震 吴凤贴影片惊呼世界末日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925757.md#1">深夜弹钢琴被说扰邻 周杰伦曾用一句话回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924453.md#1">美国81岁医生力行7件事 让大脑灵光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919486.md#1">炎症生百病 5种天然消炎药帮你抗发炎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923218.md#1">消除胃酸逆流 喝苹果醋17个不可思议的好处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923905.md#1">盐水蜂炮名列全球10大庆典 起源竟跟瘟疫有关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924737.md#1">梅森罐还能这样用 你一定想不到</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/31/n12370216.htm">国民党嘉县市议会党团 拒绝含瘦肉精猪肉</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/20/8/31/n12370216.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399999.md#1">郑板桥教子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410373.md#1">第五面墙：三位意大利天顶壁画家的杰作欣赏</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418423.md#1">【舞蹈】飞天艺术学院2024第二学期舞蹈考试（高班 女生）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416537.md#1">【净园财经】阿根廷奇迹 中国的米莱在哪里？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416610.md#1">【菁英论坛】TikTok生死时刻 中美数字战开打</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416856.md#1">中芯甩卖28纳米芯片 分析：或为驱动“内循环”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416718.md#1">泰缅边境失联模特杨泽琪获救 指甲被拔引关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416239.md#1">川普就职前和习通话释何信号 专家解析</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14416015.md#1">港片在大陆市场连连失利 谢霆锋转向开演唱会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415967.md#1">3个女儿同时发烧住院输液 谢娜自曝情绪崩溃</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416567.md#1">传洛杉矶豪宅被损毁 央视名导张纪中赴美处理</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416632.md#1">扛不起天价违约金？赵露思休养不足一月复工</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412855.md#1">自我诊断和改善 摆脱睡眠呼吸中止症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410842.md#1">人偏肺病毒感染高发 病毒专家教你怎样应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14410940.md#1">食物与心灵存在秘密连结 吃对了情绪才好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416095.md#1">【车评】拥有STI灵魂的跑车 2025 Subaru WRX tS</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14412910.md#1">高血压患者的急救、养生、茶饮及运动</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/31/n12370216.htm">国民党嘉县市议会党团 拒绝含瘦肉精猪肉</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/20/8/31/n12370216.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
